test/ll_parser_oper_command_test.test
parser print selectors:
        [ code, math, text ]
parser trace [+ parser commands, + warnings ]
ERROR: in line 15: expected `with precedence ...' after:
       with binary reformatter
                   ^^^^^^^^^^^
ERROR: in line 16: operator flags nofix and infix are incompatible:
parser define operator "+" [code, math] infix nofix with precedence 3000
                                        ^^^^^^^^^^^
======= TEST: parser test (NOT x y)
------- line 19:
parser test (NOT x y)
^^^^^^^^^^^^^^^^^^^^^
------- line 19:
parser test (NOT x y)
            ^^^^^^^^^
======= END TEST
parser define operator "NOT" [code, math] nofix with precedence 3000
       with unary reformatter
parser define operator "BUT NOT" [code, math] nofix with precedence 3000
       with binary reformatter
======= TEST: parser test (NOT x y)
------- line 24:
parser test (NOT x y)
^^^^^^^^^^^^^^^^^^^^^
------- line 24:
parser test (NOT x y)
            ^^^^^^^^^
------- line 24:
parser test (NOT x y)
                 ^^^
======= END TEST
ERROR: operator "NOT" NOT at beginning of subexpression; subexpression
       should be of form `operator operand'; line 25:
parser test (x NOT y)
             ^^^^^^^
ERROR: subexpression is too long; subexpression should be of form
       `operator operand'; line 25:
parser test (x NOT y)
             ^^^^^^^
======= TEST: parser test (x NOT y)
------- line 25:
parser test (x NOT y)
^^^^^^^^^^^^^^^^^^^^^
------- line 25:
parser test (x NOT y)
            ^^^^^^^^^
======= END TEST
ERROR: too many operators in subexpression; subexpression should be of
       form `operator operand'; line 26:
parser test (NOT x NOT y)
             ^^^^^^^^^^^
ERROR: subexpression is too long; subexpression should be of form
       `operator operand'; line 26:
parser test (NOT x NOT y)
             ^^^^^^^^^^^
======= TEST: parser test (NOT x NOT y)
------- line 26:
parser test (NOT x NOT y)
^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 26:
parser test (NOT x NOT y)
            ^^^^^^^^^^^^^
======= END TEST
======= TEST: parser test (BUT NOT x y)
------- line 27:
parser test (x BUT NOT y)
^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 27:
parser test (x BUT NOT y)
            ^^^^^^^^^^^^^
======= END TEST
ERROR: operator "BUT" "NOT" NOT in middle of subexpression;
       subexpression should be of form `operand operator
       operand'; line 28:
parser test (BUT NOT x y)
             ^^^^^^^^^^^
ERROR: subexpression is too short; subexpression should be of form
       `operand operator operand'; line 28:
parser test (BUT NOT x y)
             ^^^^^^^^^^^
======= TEST: parser test (BUT NOT x y)
------- line 28:
parser test (BUT NOT x y)
^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 28:
parser test (BUT NOT x y)
            ^^^^^^^^^^^^^
------- line 28:
parser test (BUT NOT x y)
                     ^^^
======= END TEST
ERROR: too many operators in subexpression; subexpression should be of
       form `operator operand'; line 29:
parser test (NOT x BUT NOT y)
             ^^^^^^^^^^^^^^^
ERROR: subexpression is too long; subexpression should be of form
       `operator operand'; line 29:
parser test (NOT x BUT NOT y)
             ^^^^^^^^^^^^^^^
======= TEST: parser test (NOT x BUT NOT y)
------- line 29:
parser test (NOT x BUT NOT y)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 29:
parser test (NOT x BUT NOT y)
            ^^^^^^^^^^^^^^^^^
======= END TEST
parser define operator "AND" [code, math] infix with precedence 3100
       with infix reformatter
parser define operator "OR" [code, math] infix with precedence 3100
       with infix reformatter
